[fix] Squishy buttons in supergroups

--- a/app/templates/bmc/css/group.less
+++ b/app/templates/bmc/css/group.less
@@ -440,11 +440,11 @@ body.panel-open {
 	margin-bottom: 25px !important;
 }
 
-a,
-a:active,
-a:visited {
-	font-family: inherit;
-}
+// a,
+// a:active,
+// a:visited {
+// 	font-family: inherit;
+// }
 /* END: Supergroup template fixes */
 
 // Powered by color wheel animation
